--- a/style.css
+++ b/style.css
@@ -10,4 +10,30 @@
 body{
    background-color: var(--verdemedio);
    font-family: var(--titulo);
+   margin: 0;
+   padding: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+main{
+    margin-top: 20px;
+    max-width: 90%;
+    text-align: center;
+}
+button{
+    font-family: var(--titulo);
+    background-color: var(--verdeagua);
+    color: var(--amarelo);
+    border: 2px solid var(--verdeclaro);
+    padding: 20px 30px;
+    margin: 10px 0;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 20px;
+}
+button:hover{
+    background-color: var(--amarelo);
+    color: var(--verdeagua);
+    transition: 0.5s;
 }
