--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ button:hover{
     color: var(--verdeagua);
     transition: 0.5s;
 }
-passo{
-    font-size: 50px;
+.passo{
+    font-size: 24px;
+    display: none;
+}
+.passo.ativo{
+    display: block;;
 }
